<resources>
    <string name="app_name" translatable="false">Play Tube Plus</string>
    <string name="main_bg_subtitle">Tap search to get started</string>
    <string name="view_count_text">%1$s views</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Do you want to install VLC?</string>
    <string name="no_player_found_toast">No stream player found (you can install VLC to play it)</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="fdroid_vlc_url" translatable="false">https://f-droid.org/repository/browse/?fdfilter=vlc&amp;fdid=org.videolan.vlc</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="controls_download_desc">Download stream file.</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean: %1$s ?</string>
    <string name="share_dialog_title">Share with</string>
    <string name="choose_browser">Choose browser</string>
    <string name="screen_rotation">rotation</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Some resolutions will NOT have audio when this option is enabled</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="popup_mode_share_menu_title">TubeGo popup mode</string>
    <string name="rss_button_title" translatable="false">RSS</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Unable to change subscription</string>
    <string name="subscription_update_failed">Unable to update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="fragment_whats_new">What\'s New</string>
    <string name="controls_background_title">Background</string>
    <string name="controls_popup_title">Popup</string>
    <string name="controls_add_to_playlist_title">Add To</string>
    <string name="download_path_title">Video download path</string>
    <string name="download_path_summary">Path to store downloaded videos in</string>
    <string name="download_path_dialog_title">Enter download path for videos</string>
    <string name="download_path_audio_title">Audio download path</string>
    <string name="download_path_audio_summary">Path to store downloaded audio in</string>
    <string name="download_path_audio_dialog_title">Enter download path for audio files</string>
    <string name="autoplay_by_calling_app_title">Autoplay</string>
    <string name="autoplay_by_calling_app_summary">Automatically plays a video when TubeGo is called from another app</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices support playing 2K/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Kore app not found. Install it?</string>
    <string name="kore_package" translatable="false">org.xbmc.kore</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="play_audio">Audio</string>
    <string name="default_audio_format_title">Default audio format</string>
    <string name="default_video_format_title">Default video format</string>
    <string name="webm_description">WebM — free format</string>
    <string name="m4a_description">M4A — better quality</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="popup_remember_size_pos_title">Remember popup size and position</string>
    <string name="popup_remember_size_pos_summary">Remember last size and position of popup</string>
    <string name="use_inexact_seek_title">Use fast inexact seek</string>
    <string name="use_inexact_seek_summary">Inexact seek allows the player to seek to positions faster with reduced precision</string>
    <string name="download_thumbnail_title">Load thumbnails</string>
    <string name="download_thumbnail_summary">Disable to stop all thumbnails from loading and save on data and memory usage. Changing this will clear both in-memory and on-disk image cache.</string>
    <string name="thumbnail_cache_wipe_complete_notice">Image cache wiped</string>
    <string name="metadata_cache_wipe_title">Wipe cached metadata</string>
    <string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
    <string name="metadata_cache_wipe_complete_notice">Metadata cache wiped</string>
    <string name="auto_queue_title">Auto-queue next stream</string>
    <string name="auto_queue_summary">Automatically append a related stream when playback starts on the last stream in a non-repeating play queue.</string>
    <string name="player_gesture_controls_title">Player gesture controls</string>
    <string name="player_gesture_controls_summary">Use gestures to control the brightness and volume of the player</string>
    <string name="show_search_suggestions_title">Search suggestions</string>
    <string name="show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="enable_search_history_title">Search history</string>
    <string name="enable_search_history_summary">Store search queries locally</string>
    <string name="enable_watch_history_title">History</string>
    <string name="enable_watch_history_summary">Keep track of watched videos</string>
    <string name="resume_on_audio_focus_gain_title">Resume on focus gain</string>
    <string name="resume_on_audio_focus_gain_summary">Continue playing after interruptions (e.g. phone calls)</string>
    <string name="download_dialog_title">Download</string>
    <string name="next_video_title">Next video</string>
    <string name="show_next_and_similar_title">Show next and similar videos</string>
    <string name="show_hold_to_append_title">Show hold to append tip</string>
    <string name="show_hold_to_append_summary">Show tip when background or popup button is pressed on video details page</string>
    <string name="url_not_supported_toast">URL not supported</string>
    <string name="default_content_country_title">Default content country</string>
    <string name="service_title">Service</string>
    <string name="search_language_title">Default content language</string>
    <string name="settings_category_player_title">Player</string>
    <string name="settings_category_player_behavior_title">Behavior</string>
    <string name="settings_category_video_audio_title">Video &amp; Audio</string>
    <string name="settings_category_history_title">History &amp; Cache</string>
    <string name="settings_category_popup_title">Popup</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other_title">Other</string>
    <string name="settings_category_debug_title">Debug</string>
    <string name="background_player_playing_toast">Playing in background</string>
    <string name="popup_playing_toast">Playing in popup mode</string>
    <string name="background_player_append">Queued on background player</string>
    <string name="popup_playing_append">Queued on popup player</string>
    <string name="c3s_url" translatable="false">https://www.c3s.cc/</string>
    <string name="play_btn_text">Play</string>
    <string name="content">Content</string>
    <string name="show_age_restricted_content_title">Show age restricted content</string>
    <string name="video_is_age_restricted">Age Restricted Video. Allowing such material is possible from Settings.</string>
    <string name="duration_live">live</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_title">Downloads</string>
    <string name="error_report_title">Error report</string>
    <string name="all">All</string>
    <string name="channel">Channel</string>
    <string name="playlist">Playlist</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="disabled">Disabled</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
    <string name="popup_resizing_indicator_title">Resizing</string>
    <string name="best_resolution">Best resolution</string>
    <string name="undo">Undo</string>
    <string name="play_all">Play All</string>
    <string name="always">Always</string>
    <string name="just_once">Just Once</string>
    <string name="file">File</string>
    <string name="notification_channel_id" translatable="false">newpipe</string>
    <string name="notification_channel_name">TubeGo Notification</string>
    <string name="notification_channel_description">Notifications for TubeGo Background and Popup Players</string>
    <string name="unknown_content">[Unknown]</string>
    <string name="toggle_orientation">Toggle Orientation</string>
    <string name="switch_to_background">Switch to Background</string>
    <string name="switch_to_popup">Switch to Popup</string>
    <string name="switch_to_main">Switch to Main</string>
    <string name="import_data_title">Import database</string>
    <string name="export_data_title">Export database</string>
    <string name="import_data_summary">Will override your current history and subscriptions</string>
    <string name="export_data_summary">Export history, subscriptions and playlists.</string>
    <string name="general_error">Error</string>
    <string name="network_error">Network error</string>
    <string name="could_not_load_thumbnails">Could not load all thumbnails</string>
    <string name="youtube_signature_decryption_error">Could not decrypt video URL signature</string>
    <string name="parsing_error">Could not parse website</string>
    <string name="light_parsing_error">Could not parse website completely</string>
    <string name="content_not_available">Content not available</string>
    <string name="blocked_by_gema">Blocked by GEMA</string>
    <string name="could_not_setup_download_menu">Could not set up download menu</string>
    <string name="live_streams_not_supported">This is a LIVE STREAM, which is not yet supported.</string>
    <string name="could_not_get_stream">Could not get any stream</string>
    <string name="could_not_load_image">Could not load image</string>
    <string name="app_ui_crash">App/UI crashed</string>
    <string name="player_stream_failure">Failed to play this stream</string>
    <string name="player_unrecoverable_failure">Unrecoverable player error occurred</string>
    <string name="player_recoverable_failure">Recovering from player error</string>
    <string name="external_player_unsupported_link_type">External players don\'t support these types of links</string>
    <string name="invalid_url_toast">Invalid URL</string>
    <string name="video_streams_empty">No video streams found</string>
    <string name="settings_category_downloads_title">Download</string>
</resources>