<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="general_preferences"
    android:title="@string/settings">

    <PreferenceScreen
        android:fragment="org.tubeplayer.plus.settings.VideoAudioSettingsFragment"
        android:icon="?attr/audio"
        android:title="@string/settings_category_video_audio_title"/>

    <PreferenceScreen
        android:fragment="org.tubeplayer.plus.settings.DownloadSettingsFragment"
        android:icon="@drawable/ic_file_download_6060_24dp"
        android:title="@string/settings_category_downloads_title"/>

    <PreferenceScreen
        android:fragment="org.tubeplayer.plus.settings.HistorySettingsFragment"
        android:icon="?attr/history"
        android:title="@string/settings_category_history_title"/>

    <PreferenceScreen
        android:fragment="org.tubeplayer.plus.settings.ContentSettingsFragment"
        android:icon="?attr/language"
        android:title="@string/content"/>

</PreferenceScreen>
